# libxml2-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/html-parser/: Cargo.toml
crates/html-parser/src/: lib.rs
crates/libxml2-rs/: Cargo.toml
crates/libxml2-rs-c/: Cargo.toml  build.rs
crates/libxml2-rs-c/src/: lib.rs
crates/libxml2-rs/src/: lib.rs
crates/libxml2-rs/tests/: xmlconf.rs
crates/libxml2-rs/tests/common/: mod.rs
crates/xml-c14n/: Cargo.toml
crates/xml-c14n/src/: lib.rs
crates/xml-catalog/: Cargo.toml
crates/xml-catalog/src/: lib.rs
crates/xml-chars/: Cargo.toml
crates/xml-chars/src/: lib.rs
crates/xml-ns/: Cargo.toml
crates/xml-ns/src/: lib.rs
crates/xml-relaxng/: Cargo.toml
crates/xml-relaxng/src/: lib.rs
crates/xml-schema/: Cargo.toml
crates/xml-schema/src/: lib.rs
crates/xml-tokenizer/: Cargo.toml
crates/xml-tokenizer/src/: lib.rs
crates/xml-tree/: Cargo.toml
crates/xml-tree/src/: lib.rs
crates/xml-xinclude/: Cargo.toml
crates/xml-xinclude/src/: lib.rs
crates/xml-xpath/: Cargo.toml
crates/xml-xpath/src/: lib.rs
docs/architecture/: overview.md
tests/: suite.rs
tools/xmllint-rs/: Cargo.toml
tools/xmllint-rs/src/: main.rs
