[package]
name        = "xml-tree"
description = "Arena-based mutable XML DOM for libxml2-rs (no_std + alloc)"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[features]
default  = ["std"]
std      = []

[dependencies]
xml-ns   = { path = "../xml-ns" }
bumpalo  = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
